# myfirsthackathon

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routers.py
app/api/v1/: Tests.py
app/core/: conf.py  registrar.py
src/: app.py  auth.py  config.py  worker.py
src/core/: __init__.py  config.py
src/images/: routes.py  service.py  tasks.py
stitching_tests/: homography.txt  homography_final.ipynb  my-first-hackathon-baseline.ipynb
